cambio 15 de noviembre
aqui le coloco un titulo y un mensaje al final de la pagiina

--- a/manizales2.html
+++ b/manizales2.html
@@ -41,6 +41,7 @@
   </script>
 </head>
 <body>
+    <h1>fotografias y enlaces de sitios turisticos manizales</h1>
     <table border="1">
        <tr >
           <td width="30%">
@@ -73,5 +74,6 @@
             </td>
      </tr>
     </table>  
+    muy chevere
 </body>
 </html>
